--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ place-items: center;
 							myIndex++;
 							if (myIndex > x.length) {myIndex = 1}    
 							x[myIndex-1].style.display = "block";  
-							setTimeout(carousel, 2500); // Change image every 2 seconds
+							setTimeout(carousel, 3000);
 						  }
 						  </script>
 				
